# miniwolf

./: .clinerules  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  audio.md  bitclk.py  sample.conf
.github/workflows/: c-cpp.yml
include/: agc.h  args.h  audio.h  ax25.h  bitclk.h  buffer.h  common.h  conf.h  crc.h  dedupe.h  demod.h  fft.h  filter.h  goertzel.h  hldc.h  kiss.h  line.h  loop.h  mavg.h  miniwolf.h  mod.h  modem.h  nrzi.h  options.h  ring.h  squelch.h  synth.h  tcp.h  tnc2.h  udp.h
src/: agc.c  args.c  audio.c  ax25.c  bitclk.c  buffer.c  common.c  conf.c  crc.c  dedupe.c  demod.c  demod_goertzel.c  demod_quad.c  demod_rrc.c  demod_split.c  fft.c  filter.c  goertzel.c  hldc.c  kiss.c  line.c  loop.c  main.c  main_bench.c  main_cal.c  main_log.c  main_optim.c  mavg.c  miniwolf.c  mod.c  modem.c  options.c  options_args.c  options_file.c  ring.c  squelch.c  synth.c  tcp.c  tnc2.c  udp.c
systemd/: miniwolf.service  mw_log.service
test/: main_test.c  test.c  test.h  test_ax25.h  test_dedupe.h  test_hldc.h  test_kiss.h  test_line.h  test_mavg.h  test_modem.h  test_ring.h  test_tcp.h  test_tnc2.h  test_udp.h
